--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ chardet = "0.2"
 colored_json = "3.0.1"
 encoding_rs = "0.8.32"
 futures = "0.3.26"
+time = "0.3.36"
 http = "0.2.9"
 pyo3 = { version = "0.16.3", features = ["extension-module"] }
 pyo3-asyncio = { version = "0.16.0", features = ["tokio-runtime"] }
